syntax = "proto3";

package user;




service PostService{
    rpc CreatePost(Post) returns (Post);
    rpc UpdatePost(Post) returns (Post);
    rpc GetPostById(WithId) returns(Post);
    rpc GetAllPosts(Empty) returns (Posts);
    rpc DeletePostById(WithId) returns (Post);
    rpc GetAllUserPosts(WithId) returns (Posts);
    rpc DeleteAllUserPosts(WithId) returns (Posts);
    rpc StarPosts(Empty) returns (Posts);
    rpc GetPostsSortPrice(PriceSep) returns (Posts); 
    rpc GetingPostsByColor(ColorReq) returns (Posts);
    
    rpc GetPostByPrice(GetPostPriceReq) returns (Posts);

    rpc GetPostByCategory(CatID) returns (Posts);
    rpc GetAllCategories(Empty) returns(Categories);
    rpc CreateCategory(CategoryReq) returns (Category);
    rpc DeleteCategory(CatID) returns (Category);
    rpc GetCategory(CatID) returns (Category);

    rpc PutLike(Like) returns(Like);
    rpc TakeLike(WithId) returns (Like);
    rpc GetAllPostLikesUser(WithId) returns (Likes);
    rpc GetLikeInfo(LikeId) returns (Like);
    rpc GetPostLike(WithId) returns(Likes);

    rpc PutStar(StarReq) returns(Stars);
    rpc GetStar(WithId) returns (Stars);
    rpc TakeStar(WithId) returns (Empty);

    rpc CreateBrand(CreateBrandReq) returns (Brand);
    rpc GetAllBrands(Empty) returns (Brands);
    rpc DeleteBrand(WithId) returns (Brand);
    rpc GetPostByBrand(WithId) returns(Posts);
    rpc GetBrandById(WithId) returns(Brand);

    rpc ProductSale (ProductSaleReq) returns (Productsale);
    rpc SaleProductDel(WithId) returns (Productsale);
    rpc GetAllProductsUser(WithId) returns (ProductSales);
    rpc InfoProduct(WithId) returns (Productsale);   
    rpc GetingCountSaledPro(WithId) returns (SaledCount);
    rpc GettingAllSalePro(Empty) returns(ProductSales); 
}
message SaledCount{
    int64 count =1;
}

message ProductSales{
    repeated Productsale products=1;
}
message ProductSaleReq{
    string id =1;
    string user_id=2;
    string post_id=3;
    string count =4;
    string price =5;
}

message Productsale{
    string id =1;
    string user_id=2;
    string post_id =3;
    string count =4;
    string price =5;
    string saled_at =6;
    string created_at =7;
}

message Brands{
    repeated Brand Brands=1;
}

message CreateBrandReq{
    string id =1;
    string name=2;
}

message Brand{
    string id =1;
    string name =2;
    string created_at=3;
    string updated_at=4;
}



message StarReq{
    string id =1;
    string post_id=2;
    string user_id=3;
    string stars=4;
}

message Stars{
    string post_id=1;
    string avaregeStar=2;
}



message ColorReq {
    string color =1;
}

message GetPostPriceReq{
    string low=1;
    string high=2;
}

message PutLikeReq{
    string user_id=1;
    string post_id=2;
}

message Like {
    string id =1;
    string user_id=2;
    string post_id=3;
    string created_at=4;
}

message LikeId{
    string id = 1;
}

message Likes{
    repeated Like Likes=1;
}
message CategoryReq{
    string name=1;
}
message Category{
    string id =1;
    string name=2;
    string created_at =3;
    string updated_at =4;
    string deleted_at=5;
}
message Categories{
    repeated Category Categories=1;
}
message CatID{
    string id=1;
}


message PriceSep{
    bool high=1;
}

message WithId{
    string id =1;
}

message Empty{

}

message Post{
    string id =1;
    string title =2;
    string description = 3;
    string body=4;
    string author_id =5;
    string stars=6;
    string rating = 7;
    string price = 8;
    string product_type=9;
    repeated string size =10;
    string color =11;
    string gen=12;
    string brand_id =13;
    string category_id=14;
    string created_at=15;
    string updated_at=16;
    string deleted_at=17;

}

message Posts{
    repeated Post Posts=1;
}
